--- a/kiki-viewer/Pages/FetchData.razor
+++ b/kiki-viewer/Pages/FetchData.razor
@@ -6,28 +6,27 @@
 <p>This component demonstrates fetching data from the server.</p>
 
 @if (forecasts == null) {
-    <p>
-        <em>Loading...</em>
-    </p>
-} else {
+    <p><em>Loading...</em></p>
+}
+else {
     <table class="table">
         <thead>
-        <tr>
-            <th>Date</th>
-            <th>Temp. (C)</th>
-            <th>Temp. (F)</th>
-            <th>Summary</th>
-        </tr>
+            <tr>
+                <th>Date</th>
+                <th>Temp. (C)</th>
+                <th>Temp. (F)</th>
+                <th>Summary</th>
+            </tr>
         </thead>
         <tbody>
-        @foreach (var forecast in forecasts) {
-            <tr>
-                <td>@forecast.Date.ToShortDateString()</td>
-                <td>@forecast.TemperatureC</td>
-                <td>@forecast.TemperatureF</td>
-                <td>@forecast.Summary</td>
-            </tr>
-        }
+            @foreach (var forecast in forecasts) {
+                <tr>
+                    <td>@forecast.Date.ToShortDateString()</td>
+                    <td>@forecast.TemperatureC</td>
+                    <td>@forecast.TemperatureF</td>
+                    <td>@forecast.Summary</td>
+                </tr>
+            }
         </tbody>
     </table>
 }
@@ -48,5 +47,4 @@
 
         public int TemperatureF => 32 + (int)(TemperatureC / 0.5556);
     }
-
 }
