--- a/kiki-viewer/_Imports.razor
+++ b/kiki-viewer/_Imports.razor
@@ -1,14 +1,7 @@
-﻿@using
-    System.Net.Http
-@using
-    Microsoft.AspNetCore.Components.Forms
-@using
-    Microsoft.AspNetCore.Components.Routing
-@using
-    Microsoft.AspNetCore.Components.Web
-@using
-    Microsoft.JSInterop
-@using
-    kiki_viewer
-@using
-    kiki_viewer.Shared
+﻿@using System.Net.Http
+@using Microsoft.AspNetCore.Components.Forms
+@using Microsoft.AspNetCore.Components.Routing
+@using Microsoft.AspNetCore.Components.Web
+@using Microsoft.JSInterop
+@using kiki_viewer
+@using kiki_viewer.Shared
