--- a/kiki-viewer/_Imports.razor
+++ b/kiki-viewer/_Imports.razor
@@ -3,5 +3,5 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
-@using kiki_viewer
-@using kiki_viewer.Shared
+@using kiki.viewer
+@using kiki.viewer.Shared
