--- a/kiki-viewer/Pages/Index.razor
+++ b/kiki-viewer/Pages/Index.razor
@@ -1,7 +1,35 @@
 ﻿@page "/"
+@using kiki.shared
+@inject KiKiDBContext kiki
 
-<h1>Hello, world!</h1>
+@if (posts == null) {
+    <p><em>loading</em></p>
+} else {
+    <div class="accordion">
+        @foreach (var post in posts) {
+            <div class="card">
+                <div class="card-header">
+                    <h2 class="mb-0">
+                        <button class="btn btn-link" type="button" data-toggle="collapse" data-target="collapse@post.Id" aria-expanded="true" aria-controls="collapse@post.Id">
+                            @post.Title
+                        </button>
+                    </h2>
+                </div>
 
-Welcome to your new app.
+                <div id="collapse@post.Id">
+                    <div class="card-body">
+                        @post.Content
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
+}
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+@code {
+    List<Post> posts;
+
+    protected override async Task OnInitializedAsync() {
+        posts = await kiki.GetAllPosts();
+    }
+}
